--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/website?serverTi
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.generate-ddl=true
+spring.mustache.expose-request-attributes=true
