--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/website?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/website?serverTimezone=Europe/Moscow
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.generate-ddl=true
