--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.generate-ddl=true
 #spring.mustache.expose-request-attributes=true
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix= .ftl
+upload.path=C:/Users/veb/IdeaProjects/website/src/uploads
